# rusty_GA

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  best.csv  submission.csv
src/: main.rs  main_parallel.rs
