[package]
name = "heroes"
version = "0.1.0"
edition = "2024"

[dependencies]
csv       = "1.3"
ndarray   = "0.16"
rand      = "0.8"
rayon     = "1.10"
serde     = { version = "1", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }

[profile.release]
opt-level = 3
lto = true          # link-time optimisation
codegen-units = 1